Fixed annoying word wrapping on session code

--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -149,7 +149,7 @@ img {
     }
   }
   #session-code {
-    @include grid-place(2, 2);
+    @include grid-place(#{2} / #{4}, 2);
     user-select: none;
     -moz-user-select: -moz-none;
     color: $text-color  ;
